--- a/css/style.css
+++ b/css/style.css
@@ -831,13 +831,13 @@ h3.my-profession
         transition: all 0.5s;
         background: black;
     }
-    ul li a i
+      ul li a i
     {
-        color: white;
+        color: white !important;
     }
     ul li a
     {
-        color: white;
+        color: white !important;
     }
     .nav-banner
     {
